# saa

./: Cargo.toml  README.md  token_cach.json
src/: calendar.rs  cli.rs  config.rs  debug.rs  interactive.rs  lib.rs  llm.rs  main.rs  models.rs  scheduler.rs  storage.rs  tui.rs
src/tests/: mod.rs
