[package]
name = "schedule_ai_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "2.34", features = [] }
dialoguer = "0.8"
colored = "1.9"
regex = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
base64 = "0.21"
url = "2.4"
urlencoding = "2.1"
google-calendar3 = "5.0.5"
hyper = "0.14"
hyper-rustls = "0.24"
yup-oauth2 = "8.3"
dirs = "5.0"


[dev-dependencies]
mockito = "1.4"
wiremock = "0.6"
